<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorBack">

    <FrameLayout
            android:id="@+id/home_child_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/appBar"
                android:id="@+id/topBar">

            <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorToolbarBase">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/textAppBarHome"
                        android:text="@string/app_name"
                        android:textColor="@color/colorAppBackground"
                        android:textSize="20sp"/>

            </android.support.design.widget.AppBarLayout>

        </RelativeLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">
            <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                    <RelativeLayout android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">


                        <ImageView

                                android:id="@+id/imageView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:src="@drawable/bandara" android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"/>

                        <TextView
                                android:textStyle="bold"
                                android:textSize="25sp"
                                android:textColor="@color/white"
                                android:textAlignment="center"
                                android:layout_alignParentEnd="true"
                                android:text="@string/welcome"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="100dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginRight="2dp"
                                android:layout_marginEnd="0dp"/>


                        <ImageView
                                android:layout_alignParentBottom="true"
                                android:id="@+id/imageView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/rectangle_6"
                                android:layout_marginStart="0dp" android:layout_marginBottom="0dp"/>
                        <ImageView
                                android:id="@+id/cloud"
                                android:layout_marginStart="55dp"
                                android:layout_marginTop="200dp"
                                android:src="@drawable/cloud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <ImageView
                                android:id="@+id/temp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="210dp"
                                android:layout_toEndOf="@+id/cloud"
                                android:src="@drawable/temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/notation"
                                android:textColor="#000000"
                                android:text="O"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="210dp"
                                android:layout_toRightOf="@+id/temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:textSize="20sp"
                                android:textColor="#ffffff"
                                android:text="F"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="220dp"
                                android:layout_toRightOf="@+id/notation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:textColor="@color/white"
                                android:layout_marginTop="190dp"
                                android:text="@string/date"
                                android:layout_toEndOf="@+id/cloud"
                                android:id="@+id/date_now"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="109dp"/>
                        <TextView
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                android:layout_marginTop="31dp"
                                android:layout_toRightOf="@+id/cloud"
                                android:layout_below="@+id/date_now"
                                android:text="@string/kertajati"
                                android:layout_toEndOf="@+id/cloud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="93dp" android:layout_marginLeft="93dp"/>

                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">


                </FrameLayout>
                <LinearLayout
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:id="@+id/btn_flight"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ellipse"/>

                        <ImageView
                                android:src="@drawable/aeroplane"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="18dp"/>
                        <TextView
                                android:text="@string/flights"
                                android:textAlignment="center"
                                android:layout_below="@+id/btn_flight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="0dp"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:id="@+id/btn_check"
                                android:layout_centerHorizontal="true"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ellipse"/>
                        <ImageView
                                android:src="@drawable/check_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="18dp"/>
                        <TextView
                                android:text="@string/check"
                                android:textAlignment="center"
                                android:layout_below="@+id/btn_check"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:layout_centerHorizontal="true"
                                android:layout_marginTop="0dp"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:id="@+id/btn_shop"
                                android:layout_centerHorizontal="true"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ellipse"/>
                        <ImageView
                                android:src="@drawable/shopping_bag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="18dp"/>
                        <TextView
                                android:text="@string/shop_amp_resto"
                                android:textAlignment="center"
                                android:layout_below="@+id/btn_shop"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:layout_centerHorizontal="true"
                                android:layout_marginTop="0dp"/>
                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:id="@+id/btn_transport"
                                android:layout_centerHorizontal="true"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ellipse"/>
                        <ImageView
                                android:src="@drawable/bus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="18dp"/>
                        <TextView
                                android:text="@string/transport"
                                android:textAlignment="center"
                                android:layout_below="@+id/btn_transport"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:layout_centerHorizontal="true"
                                android:layout_marginTop="0dp"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:id="@+id/btn_maps"
                                android:layout_centerHorizontal="true"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ellipse"/>
                        <ImageView
                                android:src="@drawable/placeholder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="18dp"/>
                        <TextView
                                android:text="@string/maps"
                                android:textAlignment="center"
                                android:layout_below="@+id/btn_maps"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="0dp"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:id="@+id/btn_facility"
                                android:layout_centerHorizontal="true"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ellipse"/>
                        <ImageView
                                android:src="@drawable/hospital_buildings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="18dp"/>
                        <TextView
                                android:text="@string/facilities"
                                android:textAlignment="center"
                                android:layout_below="@+id/btn_facility"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="0dp"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>
    </FrameLayout>
</RelativeLayout>